# kalshi-bot

./: .env.example  .gitignore  DECISIONS.md  README.md  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/login/: route.ts
app/login/: page.tsx
apps/dashboard/: .env.example  README.md  package-lock.json  package.json
apps/dashboard/lib/: data.ts  db-types.ts  db.ts  supabase.ts
bot/: .env.example  README.md  pyproject.toml  requirements.txt
bot/scripts/: install.sh
bot/src/kalshi_maker_bot/: catalysts.py  config.py  db.py  kalshi_client.py  logging_setup.py  order_manager.py  pnl.py  runner.py  scanner.py  sheets.py  simulator.py  strategy.py
bot/systemd/: kalshi-maker-bot.service
bot/tests/: conftest.py  test_catalysts.py  test_kalshi_client.py  test_mode_gate.py  test_order_manager.py  test_pg_mirror.py  test_pnl.py  test_runner.py  test_scanner.py  test_simulator.py  test_strategy.py
components/: EventFeed.tsx  KpiBlock.tsx  LivenessBadge.tsx  MarketsNearQualifying.tsx  OpenPositionsTable.tsx  Panel.tsx  PnlChart.tsx  StrategyPanel.tsx
lib/: data.ts  format.ts
scripts/: install.sh
src/kalshi_maker_bot/: config.py  db.py  events.py  pg_mirror.py  runner.py  simulator.py  supabase_writer.py
supabase/: README.md
supabase/migrations/: 0001_initial_schema.sql
systemd/: kalshi-maker-bot.service
tests/: test_scanner.py  test_simulator.py  test_supabase_writer.py
