[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-maker-bot"
version = "0.1.0"
description = "Maker-strategy trading bot for Kalshi (Session 1: simulation only)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-httplib2>=0.2",
    "tenacity>=8.3",
    "structlog>=24.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
    "ruff>=0.5",
]

[project.scripts]
kalshi-maker-bot = "kalshi_maker_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
